<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/StaticFragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">


    <TextView
        android:id="@+id/textAppTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="3dp"
        android:gravity="center"
        android:text="@string/text_title"
        android:textColor="#000b92"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textEthanol"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_ethanol"
            android:textAlignment="center"
            android:textSize="16sp" />

        <io.takara.fuelconverter.PriceEditText
            android:id="@+id/ethanolPrice"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/text_initial_price"
            android:textSize="16sp">
        </io.takara.fuelconverter.PriceEditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textGasoline"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/text_gasoline"
            android:textSize="16sp" />

        <io.takara.fuelconverter.PriceEditText
            android:id="@+id/gasolinePrice"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:inputType="number"
            android:text="@string/text_initial_price"
            android:textSize="16sp">
        </io.takara.fuelconverter.PriceEditText>
    </LinearLayout>

    <Button
        android:id="@+id/calculatorButton"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:background="@drawable/button_calculator_border"
        android:text="@string/btn_calculator" />
</LinearLayout>
